some adaptive for footer

--- a/app/index.html
+++ b/app/index.html
@@ -331,7 +331,7 @@
 						<div class="city-info__lines">
 							<div class="city-info__line">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</div>
 						</div>
-						<div class="city-info__lines">
+						<div class="city-info__lines city-info__lines--s-air">
 							<div class="city-info__line">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</div>
 						</div>
 					</div>
